# mini-mlir

./: .gitignore  Dockerfile  README.md  build_third_party.sh  mini_envsetup.sh
bindings/: CMakeLists.txt
bindings/pymlir/: CMakeLists.txt  pymlir.cpp
calibration/: .gitignore  README.md  envsetup.sh  test_quant.py  test_toy.py
calibration/models/: __init__.py  toy_quant.py  vit_quant.py
calibration/tests/: test_QLinear.py
examples/: test_onnx.py
examples/add/: add.py  add_tosa.mlir  data_for_capi.txt  llvmir.ll  llvmir2out.sh  mlir2lower.sh  onnx2mlir.sh  tosa2llvmir.sh
examples/div/: div.py  mlir_inference.py  onnx2mlir2lower.sh
examples/llama2/: export_onnx.py  mlir2tosa.sh  onnx2mlir.sh
examples/matmul/: matmul.mlir  onnx2mlir.sh
examples/relu/: mlir_inference.py  onnx2mlir.sh  relu.mlir  relu.py  relu_lower.mlir
examples/softmax/: onnx2mlir.sh  softmax.mlir  softmax.py
include/: CMakeLists.txt
lib/: CMakeLists.txt  ModuleInterpreter.cpp
lib/Conversion/: CMakeLists.txt
lib/Conversion/TopToTosa/: .OpFold.cpp.swp  CMakeLists.txt  OpFoldPass.cpp  OpLowering.cpp  TopToTosaPass.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/Top/: CMakeLists.txt
lib/Dialect/Top/IR/: TopOps.cpp
lib/Dialect/Top/Transforms/: Init.cpp
lib/Support/: CMakeLists.txt  DnnlBinary.cpp  DnnlUtils.cpp  MathUtils.cpp  Module.cpp
mini-mlir/: .gitignore  CMakeLists.txt  build.sh  mini_envsetup.sh
onnx2top/: README.md  build_third_party.sh  mini_envsetup.sh
tools/mini-opt/: CMakeLists.txt  mini-opt.cpp
top2tosa/: README.md
torch2top/: README.md  envsetup.sh
(+153 files in other folders)
